# Interfaces

./: Dockerfile  GUI.py  GUI_v2.py  GUI_v3.py  GUI_v4.py  README.md  fetch_bridge.yaml
Microcontrollers/: README.md
Microcontrollers/ESP Serial/: platformio.ini
Microcontrollers/ESP Serial/lib/ESP8266MQTT/: ESP8266MQTT.cpp  ESP8266MQTT.h
Microcontrollers/ESP Serial/src/: main.cpp
Microcontrollers/Teensy Serial Comm/: platformio.ini
Microcontrollers/Teensy Serial Comm/lib/MotorPID/: MotorPID.cpp  MotorPID.h
Microcontrollers/Teensy Serial Comm/lib/TeensyComm/: TeensyComm.cpp  TeensyComm.h
Microcontrollers/Teensy Serial Comm/src/: main.cpp
gqcnn_interface/: CMakeLists.txt  package.xml
gqcnn_interface/msg/: BoundingBox.msg
hw_interfaces/: package.xml  setup.cfg  setup.py
hw_interfaces/hw_interfaces/: sucker.py  test_sucker.py
ims_interfaces/: CMakeLists.txt  README.md  package.xml
ims_interfaces/msg/: Item.msg
ims_interfaces/srv/: Item.srv  ItemUpdate.srv  VendingMachine.srv
openai_ros2/: package.xml  setup.py
openai_ros2/openai_ros2/: openaiTTS.py
orbiter_bt/: CMakeLists.txt  README.md  notes.md  package.xml
orbiter_bt/bt_xml/: README.md  fall.xml  fall_2.xml  fall_3.xml  getInfo_then_go.xml  getsuc_then_move.xml  moveArm.xml  nav_servo.xml  orbiter_bt.xml  testing_full_fallback.xml  testing_full_fallback2.xml  testing_navmove.xml  testing_nonbot.xml  testing_sequencial.xml  testing_sequencial_running.xml  tree_nodes.xml
orbiter_bt/dummy_database/: inv_locs.yaml
orbiter_bt/include/: bt_string_serialize.h  dummy_ims_server.h  orbiter_bt_node.h  orbiter_checkArmGoal.h  orbiter_checkAtGoal.h  orbiter_clearInputs.h  orbiter_getItemInfo.h  orbiter_getItemPose.h  orbiter_getNextAction.h  orbiter_getSucPose.h  orbiter_getVendingLoc.h  orbiter_moveArmCuRobo.h  orbiter_moveHead.h  orbiter_moveit_behaviors.h  orbiter_moveit_behaviors_old.h  orbiter_moveit_behaviors_wrapper.h  orbiter_moveit_bridge.h  orbiter_nav_behaviors.h  orbiter_nav_fallback.h  orbiter_nav_yaw_rand.h  orbiter_repetitionManager.h  orbiter_signalFinish.h  orbiter_speak.h  orbiter_suck.h  orbiter_vendingMachineActuate.h  orbiter_waitUntilActivate.h
orbiter_bt/launch/: orbiter_bt.launch.py  perception.launch.py
orbiter_bt/msg/: Fetch.msg  fetch.msg
orbiter_bt/src/: dummy_ims_server.cpp  orbiter_bt_node.cpp  orbiter_checkArmGoal.cpp  orbiter_checkAtGoal.cpp  orbiter_clearInputs.cpp  orbiter_getItemInfo.cpp  orbiter_getItemPose.cpp  orbiter_getNextAction.cpp  orbiter_getSucPose.cpp  orbiter_getVendingLoc.cpp  orbiter_moveArmCuRobo.cpp  orbiter_moveHead.cpp  orbiter_moveit_bahaviors.cpp  orbiter_moveit_bahaviors_old.cpp  orbiter_moveit_bahaviors_wrapper..cpp  orbiter_moveit_bahaviors_wrapper.cpp  orbiter_moveit_bridge.cpp  orbiter_nav_behaviors.cpp  orbiter_nav_fallback.cpp  orbiter_nav_yaw_rand.cpp  orbiter_repetitionManager.cpp  orbiter_signalFinish.cpp  orbiter_speak.cpp  orbiter_suck.cpp  orbiter_vendingMachineActuate.cpp  orbiter_waitUntilActivate.cpp
orbiter_bt/srv/: CmdVelDist.srv  GetDropPose.srv  GetSucPose.srv  Gui.srv  Ims.srv  MoveArm.srv  MoveCam.srv  MoveHead.srv  NextAction.srv  Suck.srv
perception_interfaces/: CMakeLists.txt  README.md  package.xml
perception_interfaces/include/: perception_client.h  perception_manager.h
perception_interfaces/src/: perception_client.cpp  perception_manager.cpp
perception_interfaces/srv/: Droppose.srv  FindObjInFrame.srv  FindX.srv  Segmask.srv  Sucpose.srv
